<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">



        <!-- Header -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingBottom="24dp"
            android:layout_marginStart="10dp">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/ic_quiz_logo"
                android:contentDescription="@string/desc_logo"
                android:layout_marginStart="50dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp" />

            <FrameLayout
                android:layout_width="48dp"
                android:layout_height="48dp">

                <ImageButton
                    android:id="@+id/menuButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:padding="8dp"
                    android:clickable="true"
                    android:contentDescription="@string/menu_button_desc"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/ic_menu" />
            </FrameLayout>

        </LinearLayout>

        <!-- Tagline -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_tagline"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:textSize="16sp"
            android:paddingBottom="24dp" />

        <!-- Menu Button -->
        <LinearLayout
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:orientation="horizontal">

        </LinearLayout>



        <!-- Options Cards -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="24dp">

            <!-- Card: Créer Manuellement -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:background="@drawable/card_background"
                android:elevation="8dp"
                android:layout_marginBottom="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_create_manual"
                    android:contentDescription="@string/img_create_manual"
                    android:elevation="8dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginStart="56dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/create_manual"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_marginStart="40dp"
                    android:gravity="center"/>

                <Button
                    android:id="@+id/btn_create_manual"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="16dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:text="@string/start"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:background="@drawable/button_background"/>



            </LinearLayout>

            <!-- Card: Générer Automatiquement -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:background="@drawable/card_background"
                android:elevation="8dp"
                android:layout_marginBottom="16dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_generate_auto"
                    android:contentDescription="@string/img_generate_auto"
                    android:elevation="8dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginStart="70dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/generate_auto"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="10dp"
                    android:gravity="center"/>

                <Button
                    android:id="@+id/btn_generate_quiz"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="16dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:text="@string/start"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:background="@drawable/button_background"/>

            </LinearLayout>

            <!-- Card: Jouer en Groupe -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:background="@drawable/card_background"
                android:elevation="8dp"
                android:layout_marginBottom="16dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_play_group"
                    android:contentDescription="@string/img_group_play"
                    android:elevation="8dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginStart="56dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/group_play"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="60dp"
                    android:gravity="center"/>

                <Button
                    android:id="@+id/btn_group_play"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="16dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:text="@string/start"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:background="@drawable/button_background"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
